# BitFakeCoin

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
public/: dashboard.html  index.html  mining.html  register.html  transactions.html
public/components/: navbar.js
public/css/: style.css  transactions.css
public/js/: auth.js  dashboard.js  menu.js  mining.js  transactions.js
src/: main.cpp
src/api/: CryptoAPI.h  User.h
src/blockchain/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  Transaction.h  TransactionPool.h
src/utils/: SHA256.h
src/wallet/: Wallet.h
